bench-harbor/data/runs/303f9d2626ac4a5e975235a374899a83/test_e5286df4c913.txt
In file included from /app/solution.cpp:1,
                 from /tests/test_runner.cpp:5:
/usr/include/c++/11/atomic: In instantiation of 'struct std::atomic<std::shared_ptr<std::vector<std::__cxx11::basic_string<char> > > >':
/app/solution.cpp:100:60:   required from here
/usr/include/c++/11/atomic:211:21: error: static assertion failed: std::atomic requires a trivially copyable type
  211 |       static_assert(__is_trivially_copyable(_Tp),
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/11/atomic:211:21: note: 'false' evaluates to false
/tests/test_runner.cpp:10:5: error: redefinition of 'int main()'
   10 | int main() {
      |     ^~~~
In file included from /tests/test_runner.cpp:5:
/app/solution.cpp:122:5: note: 'int main()' previously defined here
  122 | int main() {
      |     ^~~~
